# plm-classifier

./: .gitignore  LICENSE  README.md  app.py  mkdocs.yml  pyproject.toml
data/: README.md
docs/: 404.html  cli.md  concepts.md  gui.md  index.html  index.md  install.md  models.md  sitemap.xml
docs/cli/: index.html
docs/concepts/: index.html
docs/gui/: index.html
docs/install/: index.html
docs/models/: index.html
docs/search/: search_index.json
docs_src/: models.md
plm_classifier/: __init__.py  cli.py  config.py  core.py  metrics.py  plots.py  predict.py  registry.py  report.py  search.py  train.py
plm_classifier/embeddings/: extract.py
plm_classifier/models/: classical.py  torch_models.py
